_build/_log
### Starting build.
# Target: board.ml.depends, tags: { extension:ml, file:board.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules board.ml > board.ml.depends
# Target: board.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:board.cmo, file:board.ml, implem, ocaml, quiet }
ocamlfind ocamlc -c -o board.cmo board.ml
+ ocamlfind ocamlc -c -o board.cmo board.ml
File "board.ml", line 1, characters 5-22:
1 | open Yojson.Basic.Util
         ^^^^^^^^^^^^^^^^^
Error: Unbound module Yojson
Command exited with code 2.
# Compilation unsuccessful.
